deploy/webhook/kasmcloud_webhook_server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kasmcloud-system
---
apiVersion: v1
kind: Service
metadata:
  namespace: kasmcloud-system
  name: kasmcloud-webhook
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    app: kasmcloud-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kasmcloud-webhook
  namespace: kasmcloud-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kasmcloud-webhook
  template:
    metadata:
      labels:
        app: kasmcloud-webhook
    spec:
      containers:
      - name: manager
        image: ghcr.io/iceber/kasmcloud/webhook:v0.0.2
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: kasmcloud-webhook-server-cert
