deploy/webhook/kasmcloud_webhook_manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /mutate-kasmcloud-io-v1alpha1-actor
  failurePolicy: Fail
  name: mactor.kb.io
  rules:
  - apiGroups:
    - kasmcloud.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - actors
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /mutate-kasmcloud-io-v1alpha1-link
  failurePolicy: Fail
  name: mlink.kb.io
  rules:
  - apiGroups:
    - kasmcloud.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - links
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /mutate-kasmcloud-io-v1alpha1-link
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /mutate-kasmcloud-io-v1alpha1-link
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /mutate-kasmcloud-io-v1alpha1-link
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /mutate-kasmcloud-io-v1alpha1-link
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /mutate-kasmcloud-io-v1alpha1-link
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /mutate-kasmcloud-io-v1alpha1-link
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /mutate-kasmcloud-io-v1alpha1-provider
  failurePolicy: Fail
  name: mprovider.kb.io
  rules:
  - apiGroups:
    - kasmcloud.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - providers
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /validate-kasmcloud-io-v1alpha1-actor
  failurePolicy: Fail
  name: vactor.kb.io
  rules:
  - apiGroups:
    - kasmcloud.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - actors
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /validate-kasmcloud-io-v1alpha1-link
  failurePolicy: Fail
  name: vlink.kb.io
  rules:
  - apiGroups:
    - kasmcloud.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - links
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHVENDQWdHZ0F3SUJBZ0lSQUxQR1RvSnduRjd1MW1BWGx6R25rOHd3RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlNekV5TVRJd09EQTFNak5hRncweU5EQXpNVEV3T0RBMU1qTmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNXK1Ewc05HQ28wdXkrWHFvc3UrSjJFSHZ3WjkrbG5CZEtHa0hnCjZwbzM5K3NGN0xqN0VkeWVwdUJyRnB1UStBSVhzYkFnT05qRnFaUmx0alRUczVnZituQ25zbThheGZTckc4MSsKdGhZdGF2UnRiR1R0cHFUQXcya2VoWkxnRmVsV250STZJUnowYlJpR2tTNWphY3FTajBYeUMyakd4S2MxOWJ1dgpxcVpSZEk1VXhvRj [...]
    service:
      name: kasmcloud-webhook
      namespace: kasmcloud-system
      path: /validate-kasmcloud-io-v1alpha1-provider
  failurePolicy: Fail
  name: vprovider.kb.io
  rules:
  - apiGroups:
    - kasmcloud.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - providers
  sideEffects: None
